tests/derive_ref/fails/receiver_mut.stderr
error: cannot derive `Ref` for a trait declaring `&mut self` methods
 --> tests/derive_ref/fails/receiver_mut.rs:7:18
  |
7 |     fn increment(&mut self);
  |                  ^^^^^^^^^
